--- a/recipe.html
+++ b/recipe.html
@@ -21,6 +21,7 @@ Assignment 2
     <ul>
       <li class="menu"><a href="./program1.html">Home</a></li>
       <li class="menu"><a href="./recipe.html">Recipe</a></li>
+      <li class="menu"><a href="./recipe2.html">Bonus Recipe</a></li>
     </ul>
     <h2>15-Minute Greek Garbanzo Bean Salad</h2>
     <p>Rich in protein and dietary fiber, this fresh-tasting salad provides 11%
@@ -30,7 +31,7 @@ Assignment 2
     <img src="./greekgarbonzosalad.jpg" alt="Picture of Greek Garbanzo Bean Salad">
     <p><span class="bold">Prep and Cook Time: </span>15 minutes</p>
     <p><span class="bolder">Ingredients: </span></p>
-    <ul>
+    <ul id="ingredients">
       <li>2 cups of 1 15 oz can garbanzo beans (without BPA), drained and rinsed 2/3 cup minced scallion</li>
       <li>3 medium cloves garlic, pressed</li>
       <li>1 medium ripe tomato, seeds removed and chopped</li>
