--- a/program1.html
+++ b/program1.html
@@ -26,6 +26,9 @@ Assignment 2
       <div class="button">
         <h2><a href="./recipe.html">recipe.html</a></h2>
       </div>
+      <div class="button">
+        <h2><a href="./recipe2.html">recipe2.html</a></h2>
+      </div>
     </div>
   </body>
 </html>
